--- a/bezerra/assets/scss/style.scss
+++ b/bezerra/assets/scss/style.scss
@@ -2,14 +2,53 @@
 .form-group {
   position: relative;
   font-family: "Lato", sans-serif;
+
+  label.tag-legenda {
+    color: #ffffff;
+  }
+
+  .form-control {
+    background: transparent;
+    border: none;
+    border-radius: 0;
+    border-bottom: 1px solid #ffffff;
+    color: #ffffff;
+  }
+
+  input[type="text"],
+  input[type="email"],
+  input[type="tel"],
+  textarea {
+    background: transparent;
+    border: none;
+    border-radius: 0;
+    border-bottom: 1px solid #ffffff;
+    color: #ffffff;
+  }
+  
+  .botao-vermelho {
+    font-size: 17px;
+    font-weight: 900;
+    background: #ed2129;
+    color: #ffffff;
+    border-radius: 9px;
+    padding: 15px 25px;
+    text-transform: uppercase;
+    box-shadow: 0px 0px 20px rgba(#000000, 0.3);
+  }
 }
+
+.form-group:last-child {
+  text-align: right;
+}
+
 .form-group label.error {
   position: absolute;
   top: 35px;
   right: 25px;
   width: auto;
   font-size: 11px;
-  color: #d50000;
+  color: #ffffff;
   text-align: right;
 }
 
