--- a/bezerra/assets/scss/app1.scss
+++ b/bezerra/assets/scss/app1.scss
@@ -913,7 +913,7 @@ header {
 @media screen and (max-width: 991px) {
   #contato {
     background-image: linear-gradient(321deg, #19784e, #0b5e39);
-    .row:before {
+    .fundo-verde:before {
       display: none;
     }
 
