--- a/bezerra/assets/css/app1.css
+++ b/bezerra/assets/css/app1.css
@@ -61,6 +61,9 @@ a.botao-vermelho {
   -webkit-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3); }
 
+a.botao-vermelho:hover {
+  background: rgba(237, 33, 41, 0.9); }
+
 @media screen and (max-width: 991px) {
   .tag-titulo {
     font-size: 45px; }
@@ -136,12 +139,16 @@ header {
           align-items: center;
           color: #ffffff;
           text-transform: uppercase;
-          font-size: 16px; }
+          font-size: 16px;
+          border-radius: 9px;
+          border: 1px solid transparent; }
           header nav.navbar ul.navbar-nav li.nav-item a.nav-link svg {
             height: 16px;
             width: 16px;
             margin-right: 10px;
             fill: #ffffff; }
+        header nav.navbar ul.navbar-nav li.nav-item a.nav-link:hover {
+          border: 1px solid #ffffff; }
       header nav.navbar ul.navbar-nav li.nav-item:first-child {
         margin-left: 0; }
 
@@ -685,6 +692,8 @@ header {
     text-transform: uppercase;
     -webkit-box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3); }
+  .form-group .botao-vermelho:hover {
+    background: rgba(237, 33, 41, 0.9); }
 
 .form-group:last-child {
   text-align: right; }
