--- a/bezerra/assets/scss/app1.scss
+++ b/bezerra/assets/scss/app1.scss
@@ -69,6 +69,10 @@ a.botao-vermelho {
   box-shadow: 0px 0px 10px rgba(#000000, 0.3);
 }
 
+a.botao-vermelho:hover{
+  background: rgba(#ed2129, .9);
+}
+
 @media screen and (max-width: 991px) {
   .tag-titulo {
     font-size: 45px;
@@ -158,6 +162,8 @@ header {
           color: #ffffff;
           text-transform: uppercase;
           font-size: 16px;
+          border-radius: 9px;
+          border: 1px solid transparent;
 
           svg {
             height: 16px;
@@ -165,6 +171,10 @@ header {
             margin-right: 10px;
             fill: #ffffff;
           }
+        }
+
+        a.nav-link:hover{
+          border: 1px solid #ffffff;
         }
       }
       li.nav-item:first-child {
